--- a/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
+++ b/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
@@ -332,8 +332,122 @@
     <string name="xspace_head">Klonovaná aplikácia</string>
     <string name="xspace_resolver_activity_title">Vybrať apl.</string>
     
-<string name="dark_mode_enable">Zapnúť</string>
+	 <string name="dark_mode_enable">Zapnúť</string>
      <string name="dark_mode_suggest_message">Pri západe slnka môžete automaticky prepnúť do tmavého režimu, aby ste získali pohodlnejší zážitok zo sledovania</string>
      <string name="dark_mode_suggest_title">Začalo sa stmievať</string>
      <string name="dark_mode_suggest_toast">Tmavý režim sa odteraz automaticky zapne pri západe slnka a vypne sa pri východe slnka</string>    
+	 
+	 <string name="acousticguitar">Akustická gitara</string>
+     <string name="africaanimals_preview">Savanna</string>
+     <string name="alarmclock">Budík</string>
+     <string name="amazonanimals_preview">Dažďový prales</string>
+     <string name="android_ringtone_default_with_actual">Predvolený tón zvonenia (%1$s)</string>
+     <string name="arcticanimals_preview">Arktída</string>
+     <string name="atlantis">Atlantis (stereo)</string>
+     <string name="australiaanimals_preview">Austrália</string>
+     <string name="autofill_service_name">Spravovať heslá</string>
+     <string name="beep">Pípnutie</string>
+     <string name="bells">Zvončeky</string>
+     <string name="blues">Blues</string>
+     <string name="bottle">Fľaša</string>
+     <string name="bottom_bar_smallwindow_text">Uvoľnite na pripnutie</string>
+     <string name="breeze">Vánok</string>
+     <string name="bubble">Bublina</string>
+     <string name="bullfrog">Býčia žaba</string>
+     <string name="burst">Burst</string>
+     <string name="candy">Cukrík</string>
+     <string name="carousel">Kolotoč</string>
+     <string name="celesta">Celesta</string>
+     <string name="child">detstvo</string>
+     <string name="childhood">Detstvo</string>
+     <string name="chimes">Zvonkohra</string>
+     <string name="chirp">Cvrlikání</string>
+     <string name="chord">Akord</string>
+     <string name="citylight">Mestské svetlá</string>
+     <string name="clank">Clank</string>
+     <string name="cowboy">Kovboj</string>
+     <string name="crystal">Crystal</string>
+     <string name="dance">Tanec</string>
+     <string name="daydream">Denný sen</string>
+     <string name="dewdrops">Ranná rosa</string>
+     <string name="digitaluniverse">Digitálny vesmír (stereo)</string>
+     <string name="echo">Echo</string>
+     <string name="expect">Vzrušenie</string>
+     <string name="fadein">Prelínanie</string>
+     <string name="fadeout">Zmiznutie</string>
+     <string name="fairyland">Rozprávková krajina</string>
+     <string name="fantasy">Fantasy</string>
+     <string name="fieldtrip">Výlet do terénu</string>
+     <string name="fireflies">Svetlušky</string>
+     <string name="flute">Fluna</string>
+     <string name="frenchchic">Chic</string>
+     <string name="fresh">Čerstvé</string>
+     <string name="frog">Žaba</string>
+     <string name="game">Hra</string>
+     <string name="glee">Glee</string>
+	 <string name="glockenspiel">Zvonkohra</string>
+     <string name="glorious">Sláva</string>
+     <string name="greenandblue">Dúha</string>
+     <string name="guitar">Gitara</string>
+     <string name="hallofmemories">Spomienky</string>
+     <string name="harp">Harfa</string>
+     <string name="global_phone">Môj telefón</string>
+     <string name="icelatte">Ľadové latte</string>
+     <string name="incomingmessage">Prichádzajúca správa</string>
+     <string name="kungfu">Kung-fu</string>
+     <string name="leisure">Voľný čas</string>
+     <string name="location_usage_restricted_body">Povolíte klepnutím.</string>
+     <string name="location_usage_restricted_title">Poloha na pozadí je obmedzená</string>
+     <string name="lollipop">Lízatko</string>
+     <string name="makewishes">Prianie k narodeninám</string>
+     <string name="martix">Matrix</string>
+     <string name="miui_multiwindow_not_support_cvw">Nie je možné upraviť veľkosť okna pre túto aplikáciu</string>
+     <string name="miui_warning_button_cancel">Zrušiť</string>
+     <string name="miui_warning_button_ok">OK</string>
+     <string name="miui_warning_tip_info">V %1$s sa vyskytla chyba. Chcete zatvoriť túto aplikáciu?</string>
+     <string name="moment">Moment</string>
+     <string name="monet">Jazierko s ľaliami</string>
+     <string name="morning">Ráno</string>
+     <string name="mountainspring">Horský prameň</string>
+     <string name="notice_audition">Zvuky prírody</string>
+     <string name="notificationxylophone">Upozornenie (xylofón)</string>
+     <string name="passionflower">Vášeň</string>
+     <string name="potion">Lektvar</string>
+     <string name="radar">Radar</string>
+     <string name="raindrops">Dažďové kvapky</string>
+	 <string name="relaunch_dialog_alwaysUsePrompt">Zapamätať</string>
+     <string name="relaunch_dialog_button_cancel">Zrušiť</string>
+     <string name="relaunch_dialog_button_confirm">OK</string>
+     <string name="relaunch_dialog_message">"Počas používania aplikácie nie je možné upraviť veľkosť okna. Ak chcete upraviť veľkosť okna, aplikáciu môžete reštartovať, ale údaje aplikácie vygenerované počas tejto relácie sa stratia. Napriek tomu reštartovať?"</string>
+     <string name="relaunch_dialog_title">Reštartovať \"%s\"?</string>
+     <string name="reveries">Reveries (stereo)</string>
+     <string name="robot">Robot</string>
+     <string name="security_permission_denied_text">Prístup odmietnutý</string>
+     <string name="southwestmountain_preview">Hory</string>
+     <string name="spaceage">Vesmírny vek</string>
+     <string name="spring">Jar</string>
+     <string name="stoneskimming_preview">Svetlé kroky</string>
+     <string name="sunrise">Východ slnka</string>
+     <string name="surprise">Prekvapenie</string>
+     <string name="swoosh">Swoosh</string>
+     <string name="toyrobot">Hračkársky robot</string>
+	 <string name="wallpaper_group_black_gobi_title">Piesky Gobi</string>
+     <string name="wallpaper_group_black_white_title">Čiernobiele</string>
+     <string name="wallpaper_group_color_move_title">Tekuté farby</string>
+     <string name="wallpaper_group_concerto_title">Koncert</string>
+     <string name="wallpaper_group_crystallization_subtitle">Krása vedy</string>
+     <string name="wallpaper_group_crystallization_title">Kryštalizácia</string>
+     <string name="wallpaper_group_dynamic_nebula_subtitle">Teun van der Zalm</string>
+     <string name="wallpaper_group_dynamic_nebula_title">Dynamická hmlovina</string>
+     <string name="wallpaper_group_geometric_subtitle">Rutger Paulusse</string>
+     <string name="wallpaper_group_geometric_title">Geometria</string>
+     <string name="wallpaper_group_minimalist_scenery_title">Minimalizmus</string>
+     <string name="wallpaper_group_molten_glass_title">Roztavené sklo</string>
+     <string name="wallpaper_group_more_system_wallpaper_title">Viac systémových tapiet</string>
+     <string name="wallpaper_group_natural_texture_subtitle">Tom Hegen a ďalší</string>
+     <string name="wallpaper_group_natural_texture_title">Vzory prírody</string>
+     <string name="wallpaper_group_red_mars_title">Mars</string>
+     <string name="wallpaper_group_sgn_mountain_title">Mount Siguniang</string>
+     <string name="waterdrop_preview">Kvapky</string>
+	 
 </resources>
