--- a/Slovak/main/SecurityCoreAdd.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCoreAdd.apk/res/values-sk/strings.xml
@@ -14,7 +14,7 @@ táto funkcia bude automaticky aktívna aj v Druhom profile."</string>
     <string name="air_space_setting">Nastavenie Pracovného priestoru</string>
     <string name="airspace_users_full">Nebolo možné vytvoriť viac pracovných priestorov</string>
     <string name="appData">Nainštalované apl.</string>
-    <string name="app_name">Bezpečnostné jádro</string>
+    <string name="app_name">Bezpečnostné jadro</string>
     <string name="back">Späť</string>
     <string name="button_input_password">Zadajte heslo</string>
     <string name="button_touch">Priložte prst na senzor odtlačku prsta</string>
