--- a/Slovak/main/CloudService.apk/res/values-sk/strings.xml
+++ b/Slovak/main/CloudService.apk/res/values-sk/strings.xml
@@ -1126,4 +1126,5 @@ Prečítajte si a odsúhlaste naše Podmienky používania a Ochranu súkromia.
     <string name="xiaomi_cloud_service_subtitle">Všetky dôležité položky na jednom mieste</string>
     <string name="xmpp_server_addr" />
     <string name="yesterday">Včera</string>
+<string name="btn_revoke_permission">Odvolať súhlas</string>    
 </resources>
