--- a/Slovak/main/InCallUI.apk/res/values-sk/strings.xml
+++ b/Slovak/main/InCallUI.apk/res/values-sk/strings.xml
@@ -378,4 +378,5 @@ Stlačte \"%1$s\" a potom vyberte \"%2$s\"."</string>
     <string name="wednesday_shortest">S</string>
     <string name="wifi_call">VoWi-fi hovor</string>
     <string name="yesterday">Včera</string>
+    <string name="saf_permission_recorder_unlock_screen_message">Pre ukladanie nahrávok, najskôr odomknite vaše zariadenie. Odomknúť teraz?</string>
 </resources>
