--- a/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
+++ b/Slovak/main/framework-ext-res.apk/res/values-sk-rSK/strings.xml
@@ -446,4 +446,6 @@
      <string name="wallpaper_group_natural_texture_title">Vzory prírody</string>
      <string name="wallpaper_group_red_mars_title">Mars</string>
      <string name="wallpaper_group_sgn_mountain_title">Mount Siguniang</string>	 
+     
+    <string name="sc_notification_warning_title">Prepnúť režim zobrazenia</string>     
 </resources>
