--- a/Slovak/main/CloudBackup.apk/res/values-sk/strings.xml
+++ b/Slovak/main/CloudBackup.apk/res/values-sk/strings.xml
@@ -407,4 +407,85 @@ Poznámka: Dáta doinštalovaných aplikácií nebudú zálohované na Xiaomi Cl
     <string name="wednesday_short">Str</string>
     <string name="wednesday_shortest">S</string>
     <string name="yesterday">Včera</string>
+    
+    <string name="access_denied_info">Príliš veľa pokusov. Skúste to znova neskôr.</string>
+    <string name="cloud_backup_permission_allow">Udelené</string>
+    <string name="cloud_backup_permission_not_allow">Neudelené</string>
+    <string name="cloud_backup_phone_state_summary">Prístup k telefónnemu číslu a stavu zariadenia</string>
+    <string name="cloud_backup_phone_state_title">Prístup k informáciám o zariadení</string>
+    <string name="cloud_backup_rw_storage_summary">Na zálohovanie rozloženia plochy, údajov aplikácií a nastavení aplikácie do cloudu</string>
+    <string name="cloud_backup_rw_storage_title">Prístup k úložisku</string>
+    <string name="collect_diagnosis_log">Zhromažďovať denník diagnostiky</string>
+    <string name="diagnosis_log_send_failed">Odoslanie protokolu diagnostiky zlyhalo.</string>
+    <string name="diagnosis_log_sent_format">"Diagnostický protokol bol odoslaný.
+ID: %s
+Pošlite tento kód technikovi."</string>
+    <string name="for_diagnosis_usage_only">Tieto informácie používajte iba na diagnostiku.</string>
+    <string name="network_error_info">Vyskytla sa chyba siete. Skontrolujte nastavenia siete a skúste to znova.</string>
+    <string name="network_timeout_info">Nepodarilo sa pripojiť k sieti. Skúste to znova.</string>
+    <string name="permission_to_use">Podrobnosti povolení</string>
+    <string name="progressbar_title">Kontrolujú sa problémy so zabezpečením...</string>
+    <string name="send_diagnosis_log">Odoslať denník diagnostiky</string>
+    <string name="sending">Odosiela sa…</string>
+    <string name="system_error_info">Systém je zaneprázdnený. Skúste to znova neskôr.</string>
+    <string name="temporary_not_available">Dočasne nedostupné</string>
+    <string name="unknown_error_info">Neznáma chyba</string>    
+    
+    <string name="cancel_restore">Ruší sa…</string>
+    <string name="cloud_backup_detail_app_data">Všetky údaje WeChat</string>
+    <string name="cloud_backup_detail_app_data_summary">Zahŕňa históriu rozhovorov a súbory</string>
+    <string name="cloud_backup_detail_frequence_every_7_day">Každých %d dní</string>
+    <string name="cloud_backup_detail_frequence_every_day">Každý deň</string>
+    <string name="cloud_backup_detail_header_msg">Teraz môžete zálohovať rozloženie plochy zariadenia, aplikácie, systémové nastavenia a údaje WeChat. Ďalšie informácie získate dotykom.</string>
+    <string name="cloud_backup_detail_local_backup_size">Veľkosť zálohy: %s</string>
+    <string name="cloud_backup_detail_no_time">Žiadny záložný záznam</string>
+    <string name="cloud_backup_detail_state_summary_china">Zariadenie musí byť pripojené k sieti Wi-Fi, musí sa nabíjať a musí byť uzamknuté</string>
+    <string name="cloud_backup_detail_title">Zálohovať položky</string>
+    <string name="restore_detail_category_apps_size">Veľkosť: %s</string>
+    <string name="restore_detail_category_settings_size">Veľkosť: &lt;%.1f GB</string>
+    <string name="restore_file_empty">Neexistujú žiadne zálohy</string>
+    <string name="restore_from_this_device">Vyberte zálohu</string>
+    <string name="restore_header_backup_size">Zálohované: %s</string>
+    <string name="restore_header_msg">Pred obnovením údajov služby WeChat sa uistite, že na tomto zariadení nie je nainštalovaná služba WeChat. Počas obnovy údajov službu WeChat neotvárajte ani nepoužívajte.</string>
+    <string name="restore_header_title">Celková veľkosť: %s</string>
+    <string name="restore_header_title2">Celkový počet záloh: %s</string>
+    <string name="restore_home_screen_apps">Obnoviť položky</string>
+    <string name="restore_home_screen_apps_options">"Možnosti zálohovania
+%s"</string>
+    <string name="self_device_disable">%s (v tomto zariadení nie je podporované)</string>
+    <string name="session_action_btn_text_return_home">Domovská obrazovka</string>
+    <string name="session_backup_apk_data_text">Zálohujú sa údaje WeChat…</string>
+    <string name="session_backup_apk_text">Zálohuje sa rozloženie domovskej obrazovky a systémové nastavenia…</string>
+    <string name="session_ending_backup_text">Takmer hotovo...</string>
+    <string name="session_ending_restore_text">Takmer hotovo...</string>
+    <string name="session_failed_app_usage_denied_detail">Táto aplikácia potrebuje povolenie na prístup k štatistikám používania aplikácie. Toto povolenie môžete udeliť v Nastaveniach.</string>
+    <string name="session_failed_app_usage_denied_title">Vyžadujú sa povolenia</string>
+    <string name="session_failed_cloud_no_space_detail">Táto záloha potrebuje aspoň %s cloudového úložiska.</string>
+    <string name="session_failed_cloud_no_space_title">Nedostatok cloudového úložiska. Navýšte si svoj ukladací priestor a skúste to znova.</string>
+    <string name="session_failed_disk_no_space_backup_detail">Táto záloha potrebuje aspoň %s internej pamäte.</string>
+    <string name="session_failed_disk_no_space_restore_detail">Na obnovenie položiek sa vyžaduje aspoň %s.</string>
+    <string name="session_failed_disk_no_space_title">Nedostatok interného úložiska. Vymažte úložisko a skúste to znova.</string>
+    <string name="session_failed_dist_no_space_btn_text">Vymazať úložisko</string>
+    <string name="session_failed_no_server_response_title">Nepodarilo sa pripojiť k serveru.</string>
+    <string name="session_failed_override_detail">Miestna záloha sa líši od zálohy v Xiaomi Cloud. Ak budete pokračovať, aktuálna záloha prepíše predchádzajúcu. Prepísať teraz?</string>
+    <string name="session_failed_override_title">Prepisovanie zálohy</string>
+    <string name="session_failed_restore_app_data_btn_text">Späť</string>
+    <string name="session_failed_restore_app_data_detail">Pred obnovením položiek sa uistite, že na tomto zariadení nie je nainštalovaný WeChat. Počas obnovy údajov WeChat neotvárajte ani nepoužívajte.</string>
+    <string name="session_failed_restore_app_data_title">Odinštalovať WeChat</string>
+    <string name="session_failed_title_backup">Nepodarilo sa zálohovať</string>
+    <string name="session_failed_title_restore">Nepodarilo sa obnoviť</string>
+    <string name="session_ongoing_title_backup">Zálohuje sa</string>
+    <string name="session_ongoing_title_restore">Obnovuje sa</string>
+    <string name="session_restore_apk_data_text">Obnovujú sa údaje WeChat…</string>
+    <string name="session_restore_apk_text">Obnovuje sa rozloženie domovskej obrazovky a systémové nastavenia…</string>
+    <string name="session_restore_success_date_format">dd.MM.yyyy</string>
+    <string name="session_starting_backup_text">Príprava na zálohovanie. Bude to trvať %1$d – %2$d minút.</string>
+    <string name="session_starting_restore_text">Príprava na obnovenie. Bude to trvať %1$d – %2$d minút.</string>
+    <string name="session_success_backup_data_size">Veľkosť zálohy: %s</string>
+    <string name="session_success_backup_finish_time">Zálohovanie dokončené %s</string>
+    <string name="session_success_restore_data_size">Celková veľkosť súboru: %s</string>
+    <string name="session_success_restore_finish_time">Obnovené položky na %s</string>
+     <string name="session_success_title_backup">Úspešne zálohované</string>
+     <string name="session_success_title_restore">Úspešne obnovené</string>
+     <string name="session_waiting_network">Čaká sa na sieťové pripojenie…</string>    
 </resources>
