--- a/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
+++ b/Slovak/main/SecurityCenter.apk/res/values-sk/strings.xml
@@ -571,7 +571,7 @@ alebo zadajte heslo"</string>
     <string name="app_manager_reset_app_preferences_desc">"Budú obnovené tieto nastavenia:
 
  "- Deaktivované aplikácie"
- "- Deaktivované upozornenia aplikácie"
+ "- Deaktivované upozornenia aplikácií"
  "- Predvolené aplikácie"
  "- Zakázané mobilné dáta aplikácií"
 
