--- a/Slovak/main/ThemeManager.apk/res/values-sk/strings.xml
+++ b/Slovak/main/ThemeManager.apk/res/values-sk/strings.xml
@@ -584,7 +584,7 @@ dd.MM"</string>
     <string name="personalize_second_space_not_support_set_font">Nie je možné zmeniť písmo v Druhom profile</string>
     <string name="personalize_theme_entrance">Témy</string>
     <string name="personalize_third_font">Písma</string>
-    <string name="personalize_title">Tapeta a prispôsobenie</string>
+    <string name="personalize_title">Tapety a prispôsobenie</string>
     <string name="personalize_wallpaper_sub_title">Super tapety a pozadia</string>
     <string name="personalize_wallpaper_title">Tapeta</string>
     <string name="personalized_cta_content_text">Vitajte v témach! Pomocou tejto aplikácie môžete spravovať svoje tapety, vyzváňacie tóny, písma a ďalšie.</string>
